QB: Increase browser node height to avoid truncating tall letters

--- a/less/components/querybuilder.less
+++ b/less/components/querybuilder.less
@@ -596,6 +596,7 @@ div.column-container {
         z-index: 12;
         position: relative;
         padding: @border-offset/2 0em;
+        height: 2.3em;
     }
 
     .group-title {
